[tool.poetry]
name = "snakes-cafe"
version = "0.1.0"
description = ""
authors = ["Aaron Imbrock <aaron@sizza.net>"]

[tool.poetry.dependencies]
python = "^3.8"
loguru = "^0.5.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = {version = "^21.7b0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
